--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
     text-decoration: none;
 }
 .navbutt:active {
+    transition-duration: 0.1s;
     border-right: 1px #414040 solid;
     border-top: 1px #414040 solid;
     border-left: 1px #414040 solid;
@@ -90,6 +91,10 @@ a {
     font-size: 60px;
     z-index: 500;
     color: #00001d;
+    transition: font-size 0.75s;
+}
+#linkpage i:hover {
+    font-size: 70px;
 }
 #links:focus + #linkpage {
     visibility: visible;
@@ -185,6 +190,10 @@ a {
 }
 #page #showoff:nth-child(1) img {
     border: rgb(0, 128, 6) solid 5px;
+    transition: 0.75s;
+}
+#page #showoff:nth-child(1) img:hover {
+    width: 27vw;
 }
 #page #showoff:nth-child(2) i {
     font-size: 15vw;
@@ -194,6 +203,10 @@ a {
 }
 #page #showoff:nth-child(3) img {
     border: rgb(187,5,14) solid 5px;
+    transition: 0.75s;
+}
+#page #showoff:nth-child(3) img:hover {
+    width: 27vw;
 }
 #textbox {
     display: flex;
